Create clean infrastructure projects and move implementation around

--- a/src/TooGoodToGoNotifier.Presentation.Console/TooGoodToGoNotifier.Presentation.Console.csproj
+++ b/src/TooGoodToGoNotifier.Presentation.Console/TooGoodToGoNotifier.Presentation.Console.csproj
@@ -5,6 +5,8 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>TooGoodToGoNotifier.Presentation.Console</AssemblyName>
+        <RootNamespace>TooGoodToGoNotifier.Presentation.Console</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
