--- a/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
+++ b/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
@@ -3,5 +3,10 @@
       "LogLevel": {
         "Default": "Information"
       }
+    },
+    "Notifications": {
+      "Telegram": {
+        "BotToken": "<insert-bot-token>"
+      }
     }
   }
