--- a/src/TooGoodToGoNotifier.Infrastructure/TooGoodToGoNotifier.Infrastructure.csproj
+++ b/src/TooGoodToGoNotifier.Infrastructure/TooGoodToGoNotifier.Infrastructure.csproj
@@ -7,14 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Exceptions\" />
-      <Folder Include="TooGoodToGoApi\Models\" />
     </ItemGroup>
 
     <ItemGroup>
