Implemented scanning for favorites and sending Telegram notifications

--- a/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
+++ b/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
@@ -6,7 +6,8 @@
     },
     "Notifications": {
       "Telegram": {
-        "BotToken": "<insert-bot-token>"
+        "BotToken": "<insert-bot-token>",
+        "ChatId": "-875887357"
       }
     }
   }
