Console application can now continiously scan for new favorite items

--- a/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
+++ b/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
@@ -4,6 +4,9 @@
         "Default": "Information"
       }
     },
+    "TooGoodToGo": {
+      "Email": "<insert-email>"
+    },
     "Notifications": {
       "Telegram": {
         "BotToken": "<insert-bot-token>",
