Add and configure Serilog

--- a/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
+++ b/src/TooGoodToGoNotifier.Presentation.Console/appsettings.json
@@ -1,16 +1,18 @@
 {
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information"
-      }
-    },
-    "TooGoodToGo": {
-      "Email": "<insert-email>"
-    },
-    "Notifications": {
-      "Telegram": {
-        "BotToken": "<insert-bot-token>",
-        "ChatId": "-875887357"
-      }
+  "Serilog": {
+    "Using": ["Serilog.Sinks.Console"],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" }
+    ]
+  },
+  "TooGoodToGo": {
+    "Email": "<insert-email>"
+  },
+  "Notifications": {
+    "Telegram": {
+      "BotToken": "<insert-bot-token>",
+      "ChatId": "-875887357"
     }
   }
+}
