--- a/src/TooGoodToGoNotifier.Presentation.Console/TooGoodToGoNotifier.Presentation.Console.csproj
+++ b/src/TooGoodToGoNotifier.Presentation.Console/TooGoodToGoNotifier.Presentation.Console.csproj
@@ -11,6 +11,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
         <PackageReference Include="Serilog" Version="3.0.1" />
         <PackageReference Include="Serilog.Extensions.Hosting" Version="7.0.0" />
