--- a/src/TooGoodToGoNotifier.Application/TooGoodToGoNotifier.Application.csproj
+++ b/src/TooGoodToGoNotifier.Application/TooGoodToGoNotifier.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
