--- a/src/TooGoodToGoNotifier.Infrastructure/TooGoodToGoNotifier.Infrastructure.csproj
+++ b/src/TooGoodToGoNotifier.Infrastructure/TooGoodToGoNotifier.Infrastructure.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+      <PackageReference Include="StackExchange.Redis" Version="2.6.122" />
     </ItemGroup>
 
     <ItemGroup>
