--- a/src/TooGoodToGoNotifier.Infrastructure/TooGoodToGoNotifier.Infrastructure.csproj
+++ b/src/TooGoodToGoNotifier.Infrastructure/TooGoodToGoNotifier.Infrastructure.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Azure.Identity" Version="1.10.1" />
+      <PackageReference Include="Azure.Storage.Blobs" Version="12.18.0" />
+      <PackageReference Include="Microsoft.Extensions.Azure" Version="1.7.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
