--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
-*.tfstate
-*.tfstate.lock.info
+*.tfstate*
 .terraform
 /publish
 /src/frontend-angular/.angular
